# HEISLAB2

./: README.md  hardcoded_udp.rs  temp.rs
heislab2-root/: Cargo.toml
heislab2-root-copy/: Cargo.toml
heislab2-root-copy/src/: lib.rs  main.rs
heislab2-root-copy/src/modules/: elevator_2.rs
heislab2-root-copy/src/modules/elevator_object/: elevator_init.rs  elevator_light_function.rs  elevator_movement.rs  elevator_queue_handling.rs  elevator_status_functions.rs  elevator_test.rs  poll.rs
heislab2-root-copy/src/modules/udp/: udp.rs
heislab2-root/src/: README.md  elevator.rs  elevator_2.rs  lib.rs  main.rs  master.rs  mod.rs  readme.md  slave.rs  system_init.rs  udp.rs
heislab2-root/src/modules/: cab.rs  cab_elevator_teamwork.rs  elevator.rs  elevator_test.rs  master.rs  mod.rs  mod1.rs  mod2.rs  monitoring_threads.rs  readme.md  readme.txt  slave.rs  system_init.rs  system_status.rs  udp.rs
heislab2-root/src/modules/cab/: cab.rs  elevator_light_function.rs  elevator_movement.rs  elevator_queue_handling.rs  elevator_status_functions.rs
heislab2-root/src/modules/cab_object/: cab.rs  cab_wrapper.rs  elevator_light_function.rs  elevator_movement.rs  elevator_status_functions.rs
heislab2-root/src/modules/elevator_object/: alias_lib.rs  elevator_init.rs  elevator_movement.rs  elevator_queue_handling.rs  elevator_status_functions.rs  elevator_test.rs  elevator_wrapper.rs  poll.rs
heislab2-root/src/modules/io/: io_handle.rs  io_handlers.rs  io_init.rs  io_loop.rs  io_loop.txt
heislab2-root/src/modules/master/: master.rs  master_test.rs
heislab2-root/src/modules/master_functions/: master.rs  master_test.rs  master_wrapper.rs
heislab2-root/src/modules/order_object/: order_init.rs
heislab2-root/src/modules/slave/: slave.rs  slave_test.rs
heislab2-root/src/modules/slave_functions/: slave.rs
heislab2-root/src/modules/udp/: udp.rs  udp_test.rs
heislab2-root/src/modules/udp_functions/: handlers.rs  message_handlers.rs  reciever.rs  udp.rs  udp_handler_init.rs  udp_wrapper.rs
heislab2-root/tests/: readme.txt  slave_test.rs
peer-review/TTK4145-2025-code-peer-review-files/2a0a588d/: Cargo.toml
peer-review/TTK4145-2025-code-peer-review-files/2a0a588d/src/: FSM.rs  UDP.rs  lib.rs  main.rs  order_utils.rs  request.rs  state_manager.rs  state_utils.rs
peer-review/TTK4145-2025-code-peer-review-files/337eedef/code_snapshot_hand_in_folder_to_zip/: Cargo.toml  README_code_overview.txt
peer-review/TTK4145-2025-code-peer-review-files/337eedef/code_snapshot_hand_in_folder_to_zip/src/: brain.rs  elevator_interface.rs  main.rs  memory.rs  network_communication.rs  sanity.rs
peer-review/TTK4145-2025-code-peer-review-files/3701d923/TTK4145_Real_Time_Programming-main/: Cargo.toml  README.md  network_config.json5  run_database.bash  run_elevator.bash  run_manager.bash  rustfmt.toml
peer-review/TTK4145-2025-code-peer-review-files/3701d923/TTK4145_Real_Time_Programming-main/elevator-server/: run_server.bash
peer-review/TTK4145-2025-code-peer-review-files/3701d923/TTK4145_Real_Time_Programming-main/elevator-simulator/: run_simulator.bash
peer-review/TTK4145-2025-code-peer-review-files/3701d923/TTK4145_Real_Time_Programming-main/examples/: bootleg_manager.rs  elevator_assigner.rs  elevator_drivers.rs  multi_pub.rs  multi_sub.rs  multi_thread_process.rs  publisher_node.rs  run_hall_assigner.rs  subscriber_node.rs  synchronized_database1.rs  synchronized_database2.rs  synchronized_receiver.rs  synchronized_sender.rs  test.rs
peer-review/TTK4145-2025-code-peer-review-files/3701d923/TTK4145_Real_Time_Programming-main/src/: database.rs  database_process_pair.rs  elevator.rs  elevator_process_pair.rs  lib.rs  manager.rs  manager_process_pair.rs
peer-review/TTK4145-2025-code-peer-review-files/3701d923/TTK4145_Real_Time_Programming-main/src/distributed_systems/: utils.rs
peer-review/TTK4145-2025-code-peer-review-files/3701d923/TTK4145_Real_Time_Programming-main/src/elevator_algorithm/: cost_algorithm.rs  utils.rs
peer-review/TTK4145-2025-code-peer-review-files/3701d923/TTK4145_Real_Time_Programming-main/src/elevator_io/: data.rs  driver.rs  driver_sync.rs
peer-review/TTK4145-2025-code-peer-review-files/3701d923/TTK4145_Real_Time_Programming-main/src/elevator_logic/: state_machine.rs  utils.rs
peer-review/TTK4145-2025-code-peer-review-files/3778b696/snapshot-[REDACTED]/Single_elevator/: Cargo.toml
peer-review/TTK4145-2025-code-peer-review-files/3778b696/snapshot-[REDACTED]/Single_elevator/src/: client.rs  elevator.rs  elevator_buttons.rs  fsm.rs  lib.rs  main.rs  requests.rs  tcp_definitions.rs  tcp_elevator.rs  tempCodeRunnerFile.rs  timer.rs
peer-review/TTK4145-2025-code-peer-review-files/3778b696/snapshot-[REDACTED]/Single_elevator/tests/: mod.rs
peer-review/TTK4145-2025-code-peer-review-files/975af7d1/snapshot/code/: Cargo.toml  README.md  config.json
peer-review/TTK4145-2025-code-peer-review-files/b67214ff/single_elevator/: Cargo.toml  README.md
peer-review/TTK4145-2025-code-peer-review-files/b67214ff/single_elevator/src/: interface.rs  lib.rs  main.rs
peer-review/TTK4145-2025-code-peer-review-files/bb21da0b/snapshot-[REDACTED]/: CMakeLists.txt  README.md
peer-review/TTK4145-2025-code-peer-review-files/bb21da0b/snapshot-[REDACTED]/include/: driver.h  log.h
peer-review/TTK4145-2025-code-peer-review-files/bb21da0b/snapshot-[REDACTED]/src/: CMakeLists.txt  driver.c
peer-review/TTK4145-2025-code-peer-review-files/be6f64cd/elevator_project/: Cargo.toml  config.json
peer-review/TTK4145-2025-code-peer-review-files/be6f64cd/elevator_project/src/: backup.rs  config.rs  inputs.rs  lib.rs  master.rs  slave.rs  tcp.rs
peer-review/code-for-group71/0c25976e-SveinThore/elevator_pro/: Cargo.toml
peer-review/code-for-group71/0c25976e-SveinThore/elevator_pro/src/: main.rs  utils.rs
peer-review/code-for-group71/2be0c418-Kristoffer/Project/: Cargo.toml  README.md
peer-review/code-for-group71/2be0c418-Kristoffer/Project/src/: backup.rs  main.rs  request_dispatch.rs  worldview.rs
peer-review/code-for-group71/2be0c418-Kristoffer/Project/src/network/: mod.rs  (+1 more)
(+812 files in other folders)
