[package]
name = "heislab2-root-test"
version = "0.1.0"
edition = "2021"

[dependencies]
driver-rust = { git = "https://github.com/TTK4145/driver-rust", tag = "v0.1.0" }
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
bincode = "1"
sha2 = { version = "0.11.0-pre.4" }
serde_json = "1.0"
log = "0.4"
socket2 = "0.3.19"
