[package]
name = "heislab2-root"
version = "0.1.0"
edition = "2021"

[dependencies]
driver-rust = { git = "https://github.com/TTK4145/driver-rust", tag = "v0.1.0" }
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
bincode = "1"
sha2 = { version = "0.11.0-pre.4" }
crc32fast = "1.3"
local-ip-address = "0.5"
