[package]
name = "driver-rust"
version = "0.1.0"
authors = ["Anders Petersen <klasbo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
tokio = { version = "1.43.0", features = ["full"] }
network-rust = { git = "https://github.com/TTK4145/network-rust" }
serde = "1.0.218"
local-ip-address = "0.6.3"
duplicate = "2.0.0"
serde_json = "1.0.139"

[lib]
name = "driver_rust"
path = "src/lib.rs"

[[bin]]
name = "driver-rust"
path = "src/main.rs"
