[package]
name = "elevator_code_fra_bunn_av"
version = "0.1.0"
edition = "2021"

[dependencies]
driver-rust = { git = "https://github.com/TTK4145/driver-rust", tag = "v0.1.0" }
crossbeam-channel = "0.5"


# to do serialization
postcard = {version = "1.1.1", features = ["use-std"]}
serde = { version = "1.0.*", default-features = true }
serde_with = "1.5.1"


