[package]
name = "TTK4145_real_time_programming"
version = "0.1.0"
edition = "2021"



# ====================================================================================================
# Binaries for execution with:
# $ cargo run --bin <name> 
[[bin]]
name = "elevator"
path = "src/elevator.rs"

[[bin]]
name = "elevator_process_pair"
path = "src/elevator_process_pair.rs"

[[bin]]
name = "database"
path = "src/database.rs"

[[bin]]
name = "database_process_pair"
path = "src/database_process_pair.rs"

[[bin]]
name = "manager"
path = "src/manager.rs"

[[bin]]
name = "manager_process_pair"
path = "src/manager_process_pair.rs"
# ====================================================================================================



# ====================================================================================================
# Custom made libraries
[lib]
name = "elevator_system"
path = "src/lib.rs"
# ====================================================================================================



[dependencies]
# Crates for testing stuff
rand = "0.8" # Random number generator
chrono = "0.4" # Get current time

# Tokio runtime: Provides async runtime for multi-threaded tasks, I/O, timers, etc.
tokio = { version = "1.0", features = ["full"] } 

# Zenoh is a protocol framework for high performance distributed systems 
# It is lightweight, fast and can scale good both vertically and horizontally 
zenoh = "1.1.0"

# Used to ping network and see if we are still connected
tokio-icmp-echo = "0.4" # NOTE: This library uses ICMP sockets, witch are ONLY available for root user
futures = "0.3"

# Used for data structure creation
once_cell = "1.20.2"

# Used for data structure formatting
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
