[package]
name = "single_elevator"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.14"
lazy_static = "1.5.0"
num = "0.4.3"
socket2 = "0.3.19"
num-derive = "0.4.2"
num-traits = "0.2.19"
network-rust = { git = "https://github.com/TTK4145/network-rust", tag = "v0.3.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"

