[package]
name = "elevator_project"
version = "0.1.0"
edition = "2021"

[dependencies]
driver-rust = { git = "https://github.com/TTK4145/driver-rust", tag = "v0.1.0" }
serde_json = { version = "1.0.137" }
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5"
bincode = "1.3.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
