[package]
name = "elevator_pro"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5" #ikkje gløym denne
tokio = {version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.5.8"
local-ip-address = "0.6.3"
get_if_addrs = "0.5"
bincode = "1.3"
futures = "0.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.6"
termcolor = "1.2"
ansi_term = "0.12"
prettytable-rs = "0.10"


[lib]
path = "src/lib.rs"
