[package]
name = "Exercise-3"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.31"
crossbeam-channel = "0.5.14"
driver-rust = { git = "https://github.com/TTK4145/driver-rust", tag = "v0.1.0" }
env_logger = "0.11.6"
log = "0.4.25"
petname = "2.0.2"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
socket2 = "0.5.8"
