[package]
name = "Single_elevator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
driver-rust = { git = "https://github.com/TTK4145/driver-rust", tag = "v0.1.0" }
crossbeam-channel = "0.5"
lazy_static = "1.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1", features = ["full"] }
bincode = "1.3" 
clap = { version = "4.5.31", features = ["derive"] }

[features]
silent = []
