[package]
name = "heislab"
version = "0.1.0"
edition = "2021"

[dependencies]
# Message passing
crossbeam-channel = "0.5"
# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Provided code
driver-rust = { git = "https://github.com/TTK4145/driver-rust", tag = "v0.1.0" }
# network-rust = { git = "https://github.com/TTK4145/network-rust", tag = "v0.3.0" }
network-rust = { git = "https://github.com/Th3o4oR/network-rust.git", tag = "v0.3.1" } # My fork, until PR is merged
# UUID
uuid = { version = "1.0", features = ["v4"] }
rand = "0.9.0" # Required by petname
petname = "2.0.2"
# Logging
env_logger = "0.11.6"
log = "0.4.25"
# Argument parsing
clap = { version = "4.5.31", features = ["derive"] } # Why do I have to specify features?
